fixed padding on mobile and tablet in about section:

--- a/css/style.css
+++ b/css/style.css
@@ -819,10 +819,10 @@ body {
   margin-top: -20vh; }
   @media (max-width: 56.25em) {
     .section-about {
-      padding: 27rem 0; } }
+      padding: 24rem 0; } }
   @media (max-width: 37.5em) {
     .section-about {
-      padding: 33rem 0; } }
+      padding: 27rem 0; } }
 
 .section-features {
   margin-top: -10rem;
