--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,10 +4,10 @@
     margin-top: -20vh;
 
     @include respond(tab-port) {
-        padding: 27rem 0;
+        padding: 24rem 0;
     }
     @include respond(phone) {
-        padding: 33rem 0;
+        padding: 27rem 0;
     }
 }
 
